# virtuosoNet

./: setup.cfg
src/virtuoso/: dataset.py  inference.py  loss.py  prepare_data.py  style_analysis.py
src/virtuoso/legacy/: model_run.py
virtuoso/: dataset.py  inference.py  model.py
