[metadata]
name = virtuosonet
version = 0.0.1
author = Dasaem Jeong, Taegyun Kwon
author_email = jdasam@gmail.com, ilcobo2@gmail.com
description = neural network for expressive performance generation
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/jdasam/virtuosoNet
project_urls =
    Bug Tracker = https://github.com/jdasam/virtuosoNet/issue
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src